# gkr-insights

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
apps/: CMakeLists.txt  main.cpp
apps/gkr-mediator/: CMakeLists.txt  libmain.cpp
apps/gkr_mediator/: CMakeLists.txt  lws_log_sink.cpp  lws_log_sink.hpp  lws_server.cpp  lws_server.hpp  main.cpp
apps/gkr_tester/: CMakeLists.txt  main.c  main.cpp
libs/: CMakeLists.txt  api.h
libs/gkr-mediator/: CMakeLists.txt
libs/gkr-mediator/gkr/mediator/: libmain.cpp
libs/gkr_comm/: CMakeLists.txt
libs/gkr_comm/gkr/capi/comm/: api.h  constants.h  log_upstream_log_consumer.h  names.h  parameters.h  params.h  registry.h
libs/gkr_comm/gkr/comm/: api.hpp  bridge.cpp  bridge.hpp  client_registrator.cpp  connection.hpp  constants.hpp  end_point.hpp  log.cpp  log.hxx  log_collector.hpp  log_packet.hpp  log_receiver.cpp  log_receiver.hpp  log_upstream_log_consumer.cpp  log_upstream_log_consumer.hpp  lws_context.cpp  lws_context.hpp  lws_protocol.cpp  lws_protocol.hpp  names.hpp  params.hpp  provider.hpp  registry.cpp  registry.hpp  server_registrator.cpp  service.hpp  storage.cpp  storage.hpp
libs/gkr_comm/gkr/comm/providers/: lws_context.cpp  lws_context.hpp  lws_instance.cpp  lws_instance.hpp  lws_log_pipe.cpp  lws_log_pipe.hpp  lws_log_sink.cpp  lws_log_sink.hpp  lws_protocol.cpp  lws_protocol.hpp  lws_server.cpp
libs/gkr_pipes/: CMakeLists.txt
libs/gkr_pipes/gkr/capi/comm/: web_socket_log_consumer.h
libs/gkr_pipes/gkr/comm/: client_registrator.cpp  client_registrator.hpp  upstream_log_consumer.cpp  web_socket_log_consumer.cpp  web_socket_log_consumer.hpp
libs/gkr_pipes/gkr/comm/providers/: lws_client.cpp  lws_client.hpp  lws_log_pipe.cpp  lws_log_pipe.hpp
libs/gkr_pipes/gkr/pipes/: api.hpp  client_factory.cpp  client_factory.hpp  lws_client.cpp  lws_client.hpp  lws_log_consumer.cpp  lws_log_consumer.hpp  lws_log_pipe.cpp  lws_log_pipe.hpp  registrator.cpp
libs/gkr_services/: CMakeLists.txt
libs/gkr_services/gkr/comm/: log_receiver.cpp  log_receiver.hpp  server_registrator.cpp  server_registrator.hpp
libs/gkr_services/gkr/comm/providers/: lws_log_sink.cpp  lws_log_sink.hpp  lws_server.cpp  lws_server.hpp
libs/gkr_services/gkr/services/: api.hpp  lws_log_sink.cpp  lws_log_sink.hpp  lws_server.cpp  lws_server.hpp  registrator.cpp  server.cpp  server.hpp  server_factory.cpp  server_factory.hpp
libs/mediator/: CMakeLists.txt
